# inventory-privacy

./: .gitignore  E2E.md  README.md
crates/circuits/: Cargo.toml
crates/circuits/src/: capacity.rs  capacity_smt.rs  commitment.rs  deposit_capacity.rs  item_exists_smt.rs  lib.rs  range_check.rs  signal.rs  smt_commitment.rs  state_transition.rs  tests.rs  transfer_capacity.rs  volume_lookup.rs
crates/circuits/src/anemoi/: constants.rs  gadgets.rs  mod.rs  native.rs  tests.rs
crates/circuits/src/poseidon/: config.rs  gadgets.rs  mod.rs  native.rs  tests.rs
crates/circuits/src/smt/: gadgets.rs  mod.rs  proof.rs  tests.rs  tree.rs
crates/proof-server/: Cargo.toml
crates/proof-server/src/: handlers.rs  main.rs  routes.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  prove.rs  setup.rs  verify.rs
docs/: 32-incremental-smt-architecture.md
scripts/: deploy-all.mjs  deploy-onchain.ts  deploy-vks.mjs  deploy-vks.ps1  hex-to-vector.js
web/: deploy-all.mjs  deploy-vks-only.mjs  index.html  init-vks.mjs  package-lock.json  package.json
web/public/: deployment.json
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: CapacityBar.tsx  InventoryCard.tsx  ItemSlot.tsx  Layout.tsx  OnChainDataPanel.tsx  OnChainInventorySelector.tsx  ProofResult.tsx
web/src/hooks/: useInventory.ts
web/src/pages/: BatchOperations.tsx  CreateInventory.tsx  DepositWithdraw.tsx  Explorer.tsx  Home.tsx  OnChain.tsx  ProveOwnership.tsx  Transfer.tsx
web/src/sui/: ContractConfig.tsx  config.ts  hooks.ts  localSigner.ts  provider.tsx  transactions.ts
web/src/types/: index.ts
