[package]
name = "inventory-proof-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API for inventory proof generation"

[dependencies]
inventory-circuits = { path = "../circuits" }
inventory-prover = { path = "../prover" }
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
thiserror = "1.0"

[features]
default = ["parallel"]
parallel = ["inventory-prover/parallel", "inventory-circuits/parallel"]
