[package]
name = "inventory-prover"
version = "0.1.0"
edition = "2021"
description = "Proof generation library for private inventories"

[[bin]]
name = "export-vks"
path = "src/bin/export_vks.rs"

[[bin]]
name = "circuit-stats"
path = "src/bin/circuit-stats.rs"

[dependencies]
inventory-circuits = { path = "../circuits" }
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-relations = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["sponge"] }
rand = "0.8"
thiserror = "1.0"
hex = "0.4"
serde_json = "1.0"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.0"

[features]
default = ["parallel"]
parallel = [
    "inventory-circuits/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
    "ark-groth16/parallel",
]
